# shumi

./: .coverage  .gitignore  INSTALL.md  LICENSE  README.md  README_TITLE.txt  RELEASE.md  install.sh  install_onnx.sh  pyproject.toml  shumi-service.sh
.github/workflows/: ci.yml
config/: default.yaml
docs/: HOW_IT_WORKS.md  NOTIFICATION_DESIGN.md  guide.md
models/: model.onnx  sensitive_centers.json
scripts/: ai-security-audit.service  install.sh  shumi-agent.service
src/ai_security_audit/: __init__.py
src/ai_security_audit/cli/: main.py
src/ai_security_audit/core/: auditor.py  detector.py  encryptor.py  key_vault.py  placeholder.py  tool_interceptor.py
src/ai_security_audit/plugins/: openclaw_hook.py
src/shumi/: __init__.py
src/shumi/agent/: shumi_agent.py
src/shumi/cli/: main.py
src/shumi/core/: ai_detector.py  auditor.py  event_publisher.py  notifier.py  placeholder.py  tool_interceptor.py
src/shumi/data/: chunk_strategy.json
src/shumi/plugins/: openclaw_hook.py
tests/: test_auditor.py  test_detector.py  test_encryptor.py  test_integration.py  test_onnx_basic.py  test_placeholder.py  test_shumi.py
